# lib/db/src/schema/stockItems.ts
@@ -4,9 +4,11 @@ import { z } from "zod/v4";
 
 export const stockItemsTable = pgTable("stock_items", {
   id: serial("id").primaryKey(),
+  palletNumber: text("pallet_number"),
   productName: text("product_name").notNull(),
   description: text("description"),
   location: text("location").notNull(),
+  expiryDate: text("expiry_date"),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
   updatedAt: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow().$onUpdate(() => new Date()),
 });
